--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,16 @@ repositories {
     mavenCentral()
 }
 
+jar{
+    manifest {
+        attributes 'Main-Class' : 'org.arjun.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
